--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="{{ 'overrides/assets/stylesheets/main.80c832e2.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-  <a href="https://twitter.com/squidfunk">
-    For updates follow <strong>@squidfunk</strong> on
+  <a href="https://twitter.com/tallamjr">
+    For updates follow <strong>@tallamjr</strong> on
     <span class="twemoji twitter">
       {% include ".icons/fontawesome/brands/twitter.svg" %}
     </span>
