--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -17,4 +17,10 @@
 {% block scripts %}
   {{ super() }}
   <script src="{{ 'overrides/assets/javascripts/bundle.a08d04cf.min.js' | url }}"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
+  <style>
+    body {
+      font-family: "Computer Modern Sans", sans-serif;
+    }
+  </style>
 {% endblock %}
