Make headings bold in either black or white
	modified:   material/overrides/main.html

--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -23,4 +23,17 @@
       font-family: "Computer Modern Sans", sans-serif;
     }
   </style>
+  <style>
+    .md-sidebar--secondary:not([hidden]) {
+      visibility: hidden;
+    }
+  </style>
+
+  <style>
+  .md-typeset h1 {
+    color: var(--md-typeset-color);
+    font-weight: bold;
+  }
+  </style>
+
 {% endblock %}
