Link to syntax highlighting options
	modified:   material/overrides/main.html

--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -35,5 +35,7 @@
     font-weight: bold;
   }
   </style>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/styles/atom-one-dark-reasonable.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 {% endblock %}
