--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -4,6 +4,13 @@
 {% extends "base.html" %}
 {% block extrahead %}
   <link rel="stylesheet" href="{{ 'assets/stylesheets/custom.9097afc2.min.css' | url }}">
+<style>
+.md-header__button.md-logo :-webkit-any(img,svg) {
+  fill: currentColor;
+  display: block;
+  height: 2.5rem;
+}
+</style>
 {% endblock %}
 {% block announce %}
 <a href="https://twitter.com/tallamjr">
