--- a/material/.overrides/main.html
+++ b/material/.overrides/main.html
@@ -8,7 +8,8 @@
 .md-header__button.md-logo :-webkit-any(img,svg) {
   fill: currentColor;
   display: block;
-  height: 2.5rem;
+  height: 2rem;
+  width: 2rem;
 }
 </style>
 {% endblock %}
@@ -35,11 +36,11 @@
       font-family: "Computer Modern Sans", sans-serif;
     }
   </style>
-  <style>
-    .md-sidebar--secondary:not([hidden]) {
-      visibility: hidden;
-    }
-  </style>
+  <!-- <style> -->
+  <!--   .md-sidebar--secondary:not([hidden]) { -->
+  <!--     visibility: hidden; -->
+  <!--   } -->
+  <!-- </style> -->
 
   <style>
   .md-typeset h1 {
