Add article about pre-commit

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -30,16 +30,16 @@ For updates follow <strong>@tallamjr</strong> on
   {{ super() }}
   <script src="{{ 'assets/javascripts/custom.bb97d007.min.js' | url }}"></script>
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/gruvbox-dark-pale.min.css"> <!-- atom-one-dark-reasonable.min.css"-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-  <script>hljs.highlightAll();</script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/gruvbox-dark-pale.min.css"> <!-1- atom-one-dark-reasonable.min.css"--> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script> -->
+  <!-- <script>hljs.highlightAll();</script> -->
 
-  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
-  <style>
-    body {
-      font-family: "Computer Modern Sans", sans-serif;
-    }
-  </style>
+  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css"> -->
+  <!-- <style> -->
+  <!--   body { -->
+  <!--     font-family: "Computer Modern Sans", sans-serif; -->
+  <!--   } -->
+  <!-- </style> -->
   <!-- <style> -->
   <!--   .md-sidebar--secondary:not([hidden]) { -->
   <!--     visibility: hidden; -->
