Enforce the background of code to always be dark.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -53,10 +53,26 @@ For updates follow <strong>@tallamjr</strong> on
   }
   </style>
 
+  <style>
+  .md-typeset code {
+    color: #0FF1CE;
+    background-color: #36464e;
+  }
+  </style>
+
+  <style>
+  .md-post__content.md-typeset code {
+    color: #0FF1CE;
+    background-color: #36464e;
+  }
+  </style>
+
+
   <!-- <style> -->
-  <!-- .md-typeset code { -->
+  <!-- .highlight .sb { -->
+  <!--   color: #0FF1CE; -->
   <!--   color: #f5f5f5; -->
-  <!--   background-color: #36464e; -->
   <!-- } -->
   <!-- </style> -->
+
 {% endblock %}
