Move styling to standalone css file in extra.css

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -46,26 +46,26 @@ For updates follow <strong>@tallamjr</strong> on
   <!--   } -->
   <!-- </style> -->
 
-  <style>
-  .md-typeset h1 {
-    color: var(--md-typeset-color);
-    font-weight: bold;
-  }
-  </style>
-
-  <style>
-  .md-typeset code {
-    color: #0FF1CE;
-    background-color: #36464e;
-  }
-  </style>
-
-  <style>
-  .md-post__content.md-typeset code {
-    color: #0FF1CE;
-    background-color: #36464e;
-  }
-  </style>
+  <!-- <style> -->
+  <!-- .md-typeset h1 { -->
+  <!--   color: var(--md-typeset-color); -->
+  <!--   font-weight: bold; -->
+  <!-- } -->
+  <!-- </style> -->
+  <!---->
+  <!-- <style> -->
+  <!-- .md-typeset code { -->
+  <!--   color: #0FF1CE; -->
+  <!--   background-color: #36464e; -->
+  <!-- } -->
+  <!-- </style> -->
+  <!---->
+  <!-- <style> -->
+  <!-- .md-post__content.md-typeset code { -->
+  <!--   color: #0FF1CE; -->
+  <!--   background-color: #36464e; -->
+  <!-- } -->
+  <!-- </style> -->
 
 
   <!-- <style> -->
