--- a/overrides/main.html
+++ b/overrides/main.html
@@ -17,10 +17,10 @@
 <!-- </style> -->
 {% endblock %}
 {% block announce %}
-For updates follow <strong>@tallamjr</strong> on
-<a href="https://twitter.com/tallamjr">
-  <span class="twemoji twitter">
-    {% include ".icons/fontawesome/brands/x-twitter.svg" %}
+For updates follow me on LinkedIn
+<a href="https://www.linkedin.com/in/tallamjr">
+  <span class="twemoji linkedin">
+    {% include ".icons/fontawesome/brands/linkedin.svg" %}
   </span>
   <!-- <strong>X</strong> -->
   <!-- ("Twiiter") -->
